--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,138 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
-:root {
-    --primary-color: #0a1128;
-    --white-color: #fff;
-    --light-grey-color: #eee;
-    --gap: 3rem;
-}
-
-
-/*
-font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif;
-*/
-
-html {
-    font-size: 62.5%;
-}
-body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.6rem;
-    color: var(--primary-color);
-}
-
-.main-bg {
-    background-image: url(../img/endless-constellation.svg);
-    background-size: cover;
-    background-position: center center;
-    color: var(--white-color)
-}
-
-.white-bg {
-    background-color: var(--white-color);
-}
-
-.main-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: var(--gap);
-}
-
-.section {
-    min-height: 100vh;
-}
-
-.menu {
-    background: var(--white-color);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    border-bottom: 2px solid var(--light-grey-color);
-}
-
-.menu ul {
-    list-style: none;
-    display: flex;
-}
-
-.menu ul li a {
-    display: block;
-    padding: 2rem;
-    font-size: 1.8rem;
-    color: var(--primary-color);
+.intro-content {
     position: relative;
+    top: -7rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    align-items: stretch;
+    gap: var(--gap);
+    height: 100vh;
 }
 
-.menu ul li a::after {
-    content: "";
-    position: absolute;
-    bottom: 1.2rem;
-    left: 50%;
-    width: 0;
-    height: 0.2rem;
-    background: crimson;
-    transition: all 300ms ease-in-out;
-}
-
-.menu ul li a:hover:after  {
-    width: 50%;
-    left: 25%;
-}
-
-.menu h1 {
-    font-size: 2.3rem;
-}
-
-.menu h1 a {
-    text-decoration: none;
-}
-
-.menu-content {
+.intro-text-content, .intro-img {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 0;
-    padding-bottom: 0;
+    flex-flow: column nowrap;
+    justify-content: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+.intro-text-content h2 {
+    font-size: 8rem;
+    margin-bottom: 5rem;
 }
 
-h1 {
-    font-size: 6rem;
-    text-transform: uppercase;
-}
-
-h2 {
-    font-size: 5.5rem;
-    text-transform: uppercase;
-}
-
-h3 {
-    font-size: 5rem;
-    text-transform: uppercase;
-}
-
-h4 {
-    font-size: 4.5rem;
-    text-transform: uppercase;
-}
-
-h5 {
-    font-size: 4rem;
-    text-transform: uppercase;
-}
-
-h6 {
-    font-size: 3.5rem;
-    text-transform: uppercase;
+.intro-img img{
+    max-width: 100%;
+    height: auto;
 }
