--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -6,6 +6,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 body {
     font-family: "Open Sans", sans-serif;
@@ -24,6 +25,8 @@ h1 {
 h2 {
     font-size: 5.5rem;
     text-transform: uppercase;
+    text-transform: uppercase;
+    line-height: 1.2;
 }
 
 h3 {
@@ -48,4 +51,8 @@ h6 {
 
 a {
     text-decoration: none;
+}
+
+p {
+    margin-bottom: 3rem;
 }
