--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,3 +34,43 @@
     justify-content: center;
     text-align: center;
 }
+
+.grid-one-content {
+    height: 100vh;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.grid-main-heading {
+    margin-bottom: 1rem;
+}
+
+.grid-description {
+    padding-bottom: 5rem;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--gap);
+    counter-reset: grid-counter;
+}
+
+.grid h3 {
+    font-style: 3rem;
+    position: relative;
+    padding-left: 5rem;
+    padding-bottom: 3rem;
+}
+
+.grid h3::before {
+    counter-increment: grid-counter;
+    content: counter(grid-counter);
+    position: absolute; 
+    font-size: 8rem;
+    font-style: italic;
+    top: -3rem;
+    left: -1rem;
+    transform: rotate(5deg);
+}
