--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,3 +76,18 @@
     left: -1rem;
     transform: rotate(5deg);
 }
+
+.gallery-img {
+    width: 100%;
+    max-width: 36rem;
+    max-height: 36rem;
+    overflow: hidden;
+}
+
+.gallery-img img {
+    transition: all 500ms ease-in-out;
+}
+
+.gallery-img img:hover {
+    transform: translate(-3%, 3%) scale(1.2) rotate(360deg);
+}
