--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -56,3 +56,32 @@ a {
 p {
     margin-bottom: 3rem;
 }
+
+.responsive-table {
+    overflow: hidden;
+    overflow-x: auto;
+}
+
+table {
+    min-width: 36rem;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table caption {
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+table td, table th {
+    padding: 0.5rem;
+    text-align: left;
+    border: .1rem solid var(--light-grey-color);
+    white-space: nowrap;
+}
+
+tfoot td, table th {
+    background-color: var(--light-grey-color);
+}
