--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #0a1128;
     --white-color: #fff;
-    --light-grey-color: #eee;
+    --light-gray-color: #eee;
     --gap: 3rem;
     --secondary-color: crimson;
 }
