--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,6 +172,21 @@
     padding: 3rem;
 }
 
+.backtotop {
+    position: fixed; 
+    bottom: 2rem;
+    right: 2rem;
+    background: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    color: var(--primary-color);
+    transform: rotate(90deg);
+}
+
 @media (max-width: 800px) {
     .intro-content, .grid {
         grid-template-columns: 1fr;
@@ -199,34 +214,30 @@
     .menu-content, .menu-content ul {
         flex-direction: column;
         justify-content: center;
-        height: 100vh;
     }
 
     .menu {
         display: none;
     }
 
-    .close-menu { 
-        position: fixed;
-        z-index: 2;
-        top: 0;
-        left: 0;
+    .close-menu {
+        display: none;
     }
 
     .close-menu-label::after {
-        content: '☰';
+        content: '≡';
         position: fixed;
         z-index: 2;
         top: 2rem;
         right: 2rem;
-        background: var(--primary-color);
+        background-color: var(--primary-color);
         color: var(--white-color);
         font-size: 3rem;
         line-height: 3rem;
         width: 3rem;
         height: 3rem;
         text-align: center;
-        padding: .5rem;
+        padding: .3rem;
         cursor: pointer;
     }
 
@@ -235,7 +246,11 @@
     }
 
     .close-menu:checked~.close-menu-label::after {
-        display: block;
         content: 'x';
     }
+
+    .menu-spacing {
+        display: none;
+    }
+
 }
